--- a/config/database.yml
+++ b/config/database.yml
@@ -1,26 +1,26 @@
 # SQLite version 3.x
 #   gem install sqlite3-ruby (not necessary on OS X Leopard)
 development:
-  adapter: sqlite3
+  adapter: mysql
   database: xcrum_development
-#  username: root
-#  password: 123
+  username: root
+  password: 123
   timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
+  adapter: mysql
   database: xcrum_test
-#  username: root
-#  password: 123
+  username: root
+  password: 123
   timeout: 5000
 
 production:
-  adapter: sqlite3
+  adapter: mysql
   database: xcrum_production
-#  username: root
-#  password: 123
+  username: root
+  password: 123
   timeout: 5000
 
